--- a/wp-content/themes/essay/scss/_settings.scss
+++ b/wp-content/themes/essay/scss/_settings.scss
@@ -45,13 +45,13 @@ $include-html-global-classes: $include-html-classes;
 // We use these to control various global styles
 // $body-bg: #fff;
 // $body-font-color: #222;
-// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-family: "Prata", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 $font-weight-normal:normal;
 $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 
 // We use this to control font-smoothing
-// $font-smoothing: antialiased;
+ $font-smoothing: antialiased;
 
 // We use these to control text direction settings
 // $text-direction: ltr;
@@ -59,7 +59,7 @@ $body-font-weight: $font-weight-normal;
 // $default-float: left;
 
 // We use these as default colors throughout
-$primary-color: #008CBA;
+$primary-color: black;
 // $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
@@ -78,11 +78,11 @@ $primary-color: #008CBA;
 // $column-gutter: rem-calc(30);
 
 // Media Query Ranges
-// $small-range: (0em, 40em);
-// $medium-range: (40.063em, 64em);
-// $large-range: (64.063em, 90em);
-// $xlarge-range: (90.063em, 120em);
-// $xxlarge-range: (120.063em, 99999999em);
+ $small-range: (0em, 40em);
+ $medium-range: (40.063em, 64em);
+ $large-range: (64.063em, 90em);
+ $xlarge-range: (90.063em, 120em);
+ $xxlarge-range: (120.063em, 99999999em);
 
 // $screen: "only screen";
 
@@ -120,7 +120,7 @@ $primary-color: #008CBA;
 // TYPOGRAPHY
 //
 
-// $include-html-type-classes: $include-html-classes;
+ $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
 // $header-font-family: $body-font-family;
