--- a/wp-content/themes/essay/scss/header.scss
+++ b/wp-content/themes/essay/scss/header.scss
@@ -6,6 +6,34 @@
       font-size: $h1-font-size;
       padding: 1rem 0;
       display: block;
+      text-align: center;
+      text-transform: uppercase;
+      span {
+        display: none;
+        font-size: $small-font-size;
+        margin-left: 45px;
+        margin-top: 5px;
+      }
+    }
+    @media #{$medium-up} {
+      a {
+        text-align: left;
+        span {
+          display: block;
+        }
+      }
+      @include grid-column(
+        // Control the number of columns
+        $columns:9,
+          // Specify whether or not this is the last column in the row
+        $last-column:true,
+          // Choose whether or not to center this column
+        $center:true
+          // Choose the number of columns to offset this element by
+
+      );
+      text-align: center;
+
     }
   }
 }
