--- a/wp-content/themes/essay/scss/main.scss
+++ b/wp-content/themes/essay/scss/main.scss
@@ -1,9 +1,13 @@
 main[role="main"] {
   @include grid-row();
-  border-top: 1px solid #000000;
+
   padding-top: 1rem;
 }
 
 section {
-  @include grid-column(8);
+  @include grid-column(12);
+  @media #{$medium-up} {
+    @include grid-column(9);
+
+  }
 }
