--- a/wp-content/themes/essay/scss/footer.scss
+++ b/wp-content/themes/essay/scss/footer.scss
@@ -1,3 +1,11 @@
 footer {
   @include grid-row();
+  border-top: 1px solid black;
+  .copyright {
+    font-size: $small-font-size;
+    font-family: sans-serif;
+    margin: 0.5em 0;
+    text-align: right;
+
+  }
 }
