--- a/wp-content/themes/essay/scss/header.scss
+++ b/wp-content/themes/essay/scss/header.scss
@@ -28,7 +28,7 @@
           // Specify whether or not this is the last column in the row
         $last-column:true,
           // Choose whether or not to center this column
-        $center:true
+        $center:false
           // Choose the number of columns to offset this element by
 
       );
