--- a/wp-content/themes/essay/scss/post.scss
+++ b/wp-content/themes/essay/scss/post.scss
@@ -16,16 +16,30 @@ article {
   border-top: 1px solid black;
   margin-right: 1em;
   width: 25%;
-  padding-top: 1em;
+  padding: 1em 0;
+
   h2 {
-    font-size: 1em;
+    font-size: 1.5em;
+    line-height: 1.2em;
     &:first-child {
       margin-top: 0;
     }
   }
 }
-.post {
 
+.post-categories {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  li {
+    a {
+      border-bottom: 1px dotted black;
+      font-size: $small-font-size;
+    }
+  }
+}
+.post {
+  padding-bottom: 1em;
   .date, .author {
     font-size: $small-font-size;
     display: block;
@@ -38,5 +52,31 @@ article {
     text-shadow: 0px 2px 2px rgba(255, 255, 255, 0.4);
     font-size: $base-font-size;
     line-height: 1.8em;
+  }
+  .read-more {
+    font-size: $base-font-size;
+    border-bottom: 1px dotted black;
+    margin-top: 0;
+    margin-bottom: 0.5em;
+    display: inline;
+  }
+}
+
+.single {
+  article {
+    @include grid-column(12);
+  }
+  .post {
+    padding: 0.5em 0 0 0;
+    .first-big {
+      float: left;
+      margin: 3px 15px 1px 0;
+
+      line-height: 1em;
+      font-size: 5em;
+    }
+    h1 {
+      margin-bottom: 0.75em;
+    }
   }
 }
