--- a/wp-content/themes/essay/scss/sidebar.scss
+++ b/wp-content/themes/essay/scss/sidebar.scss
@@ -10,6 +10,7 @@ aside.sidebar {
     border-top: 1px solid #000000;
     margin: 0 0 0.5em 0;
     padding-top: 0.5em;
+    font-size: $h5-font-size;
     &:first-child {
       margin-top: 0;
     }
@@ -18,6 +19,7 @@ aside.sidebar {
     margin-bottom: 1em;
   }
   .textwidget {
+    padding: 0.5em 0;
     p {
       font-size: 0.9em;
       line-height: 1.5em;
