--- a/wp-content/themes/essay/scss/base.scss
+++ b/wp-content/themes/essay/scss/base.scss
@@ -4,3 +4,37 @@ a {
     color: dimgray;
   }
 }
+
+input[type="submit"], button {
+  background-color: transparent;
+  padding: 0.5em 1em;
+  border: 1px solid black;
+  font-size: $base-font-size;
+  border-radius: 5px;
+  transition: background-color 0.2s linear;
+  cursor: pointer;
+  &:hover {
+    background-color: black;
+    color: white;
+  }
+}
+
+code {
+  display: block;
+  margin: 1em 0;
+  width: 100%;
+  color: black;
+}
+
+form {
+
+  @include prefix-postfix-base();
+  height: auto;
+  border: none;
+  text-align: left;
+
+  input[type="text"], textarea {
+    border-radius: 5px;
+  }
+
+}
