--- a/wp-content/themes/essay/scss/footer.scss
+++ b/wp-content/themes/essay/scss/footer.scss
@@ -8,4 +8,12 @@ footer {
     text-align: right;
 
   }
+  @media #{$medium-up} {
+    .copyright {
+      background-color: white;
+      border-color: black;
+      color: white;
+    }
+
+  }
 }
