• Changes to footer • Added favicon

--- a/wp-content/themes/essay/scss/footer.scss
+++ b/wp-content/themes/essay/scss/footer.scss
@@ -12,7 +12,7 @@ footer {
     .copyright {
       background-color: white;
       border-color: black;
-      color: white;
+      color: black;
     }
 
   }
