--- a/wp-content/themes/essay/style.css
+++ b/wp-content/themes/essay/style.css
@@ -3777,7 +3777,7 @@ footer {
     footer .copyright {
       background-color: white;
       border-color: black;
-      color: white; } }
+      color: black; } }
 
 article {
   padding-top: 1em;
