• Added support for Image Caption

--- a/wp-content/themes/essay/scss/header.scss
+++ b/wp-content/themes/essay/scss/header.scss
@@ -5,7 +5,7 @@
     @include grid-column(12);
     a {
       font-size: $h1-font-size;
-      padding: 1rem 0;
+      padding: 1rem 0 0rem 0;
       display: block;
       text-align: center;
       text-transform: uppercase;
