--- a/wp-content/themes/essay/scss/post.scss
+++ b/wp-content/themes/essay/scss/post.scss
@@ -106,13 +106,25 @@ article {
     .first-big {
       float: left;
       margin: 3px 15px 1px 0;
-
       line-height: 1em;
       font-size: 5em;
     }
     h1 {
       margin: 0.75em 0 0.25em 0;
+    }
+    .the-image {
+      border-bottom: 1px solid $primary-color;
+      padding-bottom: 0.25em;
 
     }
+    .thumbnail-caption {
+      width: 100%;
+      display: block;
+      text-align: center;
+      margin: 1em 0;
+      //font-family: sans-serif;
+      font-size: $small-font-size;
+    }
+
   }
 }
