--- a/wp-content/themes/essay/style.css
+++ b/wp-content/themes/essay/style.css
@@ -3814,10 +3814,16 @@ article {
 .post {
   padding-bottom: 1em; }
   .post .post-thumbnail {
-    margin-bottom: 0.5em;
+    margin-bottom: 1.5em;
     width: 100%;
     height: auto;
     display: block; }
+  .post .thumbnail-caption {
+    width: 100%;
+    display: block;
+    text-align: center;
+    margin: 1em 0;
+    font-size: 60%; }
   .post .date, .post .author {
     font-size: 60%;
     display: block;
@@ -3863,12 +3869,6 @@ article {
   .single .post .the-image {
     border-bottom: 1px solid black;
     padding-bottom: 0.25em; }
-  .single .post .thumbnail-caption {
-    width: 100%;
-    display: block;
-    text-align: center;
-    margin: 1em 0;
-    font-size: 60%; }
 
 .comments-wrapper {
   border-top: 1px solid black;
