--- a/wp-content/themes/essay/scss/sidebar.scss
+++ b/wp-content/themes/essay/scss/sidebar.scss
@@ -27,7 +27,8 @@ aside.sidebar {
     color: white;
   }
   i {
-    color: white;
+    color: black;
+    background-color: white;
     font-size: 2em;
     transition: color 0.2s ease-in;
     cursor: pointer;
@@ -47,7 +48,8 @@ aside.sidebar {
       border-color: black;
     }
     i {
-      color: black;
+      color: white;
+      background-color: black;
       &:hover {
         color: #1a1a1a;
       }
