Added circular class back, fixed icons

--- a/wp-content/themes/essay/scss/base.scss
+++ b/wp-content/themes/essay/scss/base.scss
@@ -41,9 +41,12 @@ form {
 
 a i, i {
   border-radius: 30px;
+  padding: 10px;
   background-color: black;
   color: white;
-  padding: 10px;
+  font-size: 20px !important;
+  box-sizing: content-box;
+
 }
 
 .circular {
