Fixed 'author' bottom margin

--- a/wp-content/themes/essay/scss/post.scss
+++ b/wp-content/themes/essay/scss/post.scss
@@ -67,7 +67,7 @@ article {
   .date, .author {
     font-size: $small-font-size;
     display: block;
-    margin: -5px 0 10px 0;
+    margin: -5px 0 2em 0;
     font-family: sans-serif;
   }
   p {
