• Adjusted padding on sidebar (mobile)

--- a/wp-content/themes/essay/scss/sidebar.scss
+++ b/wp-content/themes/essay/scss/sidebar.scss
@@ -2,7 +2,7 @@ aside.sidebar {
   @include grid-column(12);
   background-color: black;
   color: white;
-
+  padding-top: 1em;
   h3 {
     border-top: 1px solid white;
     margin: 0 0 0.5em 0;
@@ -40,6 +40,7 @@ aside.sidebar {
     @include grid-column(3);
     background-color: white;
     color: black;
+    padding-top: 0;
     h3, p {
       color: black;
 
